# pg_multitenant

./: Cargo.toml  README.md  pg_multitenant.control
scripts/: test.sql
sql/: bootstrap.sql
src/: lib.rs  pgmt.rs  tests.rs
